--- a/module7/video1/packaging_tutorial/pyproject.toml
+++ b/module7/video1/packaging_tutorial/pyproject.toml
@@ -1,22 +1,6 @@
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = [
+    "setuptools>=61.0",
+    "wheel"
+]
 build-backend = "setuptools.build_meta"
-
-[project]
-name = "example_package_vskesha"
-version = "0.0.1"
-authors = [
-   { name="VsKesha", email="vskesha@gmail.com" },
-]
-description = "A small example package"
-readme = "README.md"
-requires-python = ">=3.7"
-classifiers = [
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
-]
-
-[project.urls]
-"Homepage" = "https://github.com/pypa/sampleproject"
-"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
