added 7 files to module7/materials

--- a/module7/video1/packaging_tutorial/setup.cfg
+++ b/module7/video1/packaging_tutorial/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = example_package_vskesha
-version = 0.0.2
+version = 0.0.3
 author = VsKesha
 author_email = vskesha@gmail.com
-description = A small example package v. 0.0.2
+description = A small example package v. 0.0.3
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/pypa/sampleproject
@@ -13,7 +13,6 @@ classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
-
 
 [options]
 package_dir =
@@ -26,3 +25,8 @@ python_requires = >=3.6
 
 [options.packages.find]
 where = src
+
+[options.entry_points]
+console_scripts =
+    hello_world = example_package:hello_world
+    add_one = example_package:add_one
